--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li>Marhay Na Gawe Award</li>
             </br>
             COLLEGE
-            <li>Rank 1, Photojournalism Contest - Camilo Osias Arts Festival 2022 Photojournalism Contest</li>
+            <li>Rank 1, Photojournalism Contest - Camilo Osias Arts Festival 2022</li>
             <li>1st Place, Travel Blog Competition - ABC Week 2022</li>
             </ul>
         </br>
